--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:3-management-alpine
     ports:
       - "5672:5672"
       - "15672:15672" # management UI
@@ -10,7 +10,7 @@ services:
       RABBITMQ_DEFAULT_PASS: pass
 
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -26,32 +26,10 @@ services:
       - "8000:8000"
     environment:
       RABBITMQ_URL: amqp://user:pass@rabbitmq:5672/
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@postgres:5432/smartroute
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/smartroute
     depends_on:
       - rabbitmq
       - postgres
-
-  weather_agent:
-    build: ./agents/weather_agent
-    environment:
-      RABBITMQ_URL: amqp://user:pass@rabbitmq:5672/
-    depends_on:
-      - rabbitmq
-
-  travel_agent:
-    build: ./agents/travel_agent
-    environment:
-      RABBITMQ_URL: amqp://user:pass@rabbitmq:5672/
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@postgres:5432/smartroute
-    depends_on:
-      - rabbitmq
-      - postgres
-
-  frontend:
-    build: ./frontend
-    ports:
-      - "3000:80"
 
 volumes:
   pgdata:
-
