--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,6 @@ RUN apk add --no-cache postgresql-dev gcc python3-dev musl-dev
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY test.py .
+COPY . .
 
 CMD ["python", "test.py"]
