--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
-    ports:
-      - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: user
       RABBITMQ_DEFAULT_PASS: pass
@@ -45,8 +43,6 @@ services:
 
   backend:
     build: ./backend
-    ports:
-      - "8080:8080"
     environment:
       RABBITMQ_URL: amqp://user:pass@rabbitmq:5672/
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/smartroute
@@ -61,6 +57,18 @@ services:
       - "traefik.http.routers.backend.rule=Host(`api.localhost`)"
       - "traefik.http.routers.backend.entrypoints=web"
       - "traefik.http.services.backend.loadbalancer.server.port=8080"
+
+  frontend:
+    build: ./frontend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`localhost`)"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+    networks:
+      - network
+    depends_on:
+      - backend
 
 volumes:
   smartRouteData:
