--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,9 @@
-fastapi==0.115.0
-uvicorn==0.31.0
-pydantic==2.9.0
+fastapi==0.120.1
+uvicorn==0.38.0
+pydantic==2.12.3
 pika==1.3.2
-psycopg2-binary==2.9.9
+psycopg2==2.9.11
+dotenv==0.9.9
+crewai==1.2.0
+ollama==0.6.0
+litellm==1.79.0
